# personal-site

./: .gitignore  .tool-versions  LICENSE.md  README.md  makesite.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
content/: _index.html  about.html
content/blog/: .gitignore
layout/: feed.xml  item.html  item.xml  list.html  page.html  post.html  test.html
script/: all  bootstrap  cibuild  clean  dependencies  generate  gh-dependencies  install-packaging  lint  local-setup  mkvenv  server  test
static/css/: simple.css  style.css
static/css/scss/: pico.classless.css  pico.css  pico.css.map  pico.fluid.classless.css  pico.scss  pico.slim.css
static/img/: manifest.webmanifest
test/: 2018-01-01-test-post.md  path.py  test_content.py  test_file_io.py  test_get_post_first_p.py  test_headers.py  test_list.py  test_main.py  test_pages.py  test_path.py  test_render.py  test_rfc_2822_date.py  test_truncate.py
